infra/ingress/ops-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ustbite-ops-proxy
  namespace: ustbite-backend
spec:
  type: ExternalName
  externalName: ustbite-aiops-service-prod.ustbite-ops.svc.cluster.local
  ports:
    - port: 8011
      targetPort: 8011
